more random projects for google interview

--- a/RandomProjects/RandomProjects.vcxproj.filters
+++ b/RandomProjects/RandomProjects.vcxproj.filters
@@ -15,7 +15,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="practice_interview_questions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Duplicates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="binaryTreeSumLeafs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
